# sumo-sovd

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  run-tests.sh
crates/campaign-cli/: Cargo.toml
crates/campaign-cli/src/: main.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: campaign.rs  ecu.rs  error.rs  lib.rs  security_helper.rs  sovd_ops.rs
crates/orchestrator/tests/: campaign_tests.rs
examples/: campaign_test.rs
simulations/multi-ecu/: README.md  reset.sh  start.sh
simulations/multi-ecu/config/: gateway.toml  secrets.toml
